--- a/Codigo/docker-compose.yml
+++ b/Codigo/docker-compose.yml
@@ -4,15 +4,15 @@ services:
     restart: always
     container_name: postgresql
     volumes:
-      - ./data/db:/var/lib/postgresql/data
+      - pg_data:/var/lib/postgresql/data  # Cambiado a un volumen Docker persistente
     environment:
-      - DATABASE_HOST=127.0.0.1
+      - DATABASE_HOST=db
       - POSTGRES_DB=vigifia
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin
     ports:
       - "5432:5432"
-  
+
   pgadmin:
     image: dpage/pgadmin4
     container_name: pgadmin
@@ -33,8 +33,12 @@ services:
     ports:
       - "8000:8000"
     environment:
+      - DATABASE_HOST=db  # Cambiado para que Django se conecte al servicio `db`
       - POSTGRES_NAME=vigifia
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin
     depends_on:
       - db
+
+volumes:
+  pg_data:  # Define el volumen persistente de Docker
