--- a/Codigo/frontend/package.json
+++ b/Codigo/frontend/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
+    "i18next": "^25.1.3",
+    "i18next-browser-languagedetector": "^8.1.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.5.1",
     "react-router-dom": "^7.5.1"
   },
   "devDependencies": {
