--- a/Codigo/frontend/package.json
+++ b/Codigo/frontend/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
     "i18next": "^25.1.3",
