--- a/Codigo/Dockerfile.frontend
+++ b/Codigo/Dockerfile.frontend
@@ -10,6 +10,8 @@ COPY ./frontend/package*.json ./
 # Instala las dependencias usando npm ci para entornos de producción
 RUN npm ci
 
+RUN npm install
+
 # Copia el resto del código fuente
 COPY ./frontend .
 
