--- a/Codigo/Dockerfile
+++ b/Codigo/Dockerfile
@@ -3,24 +3,21 @@ FROM python:3.13.0-alpine3.20
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1
 
-# Instala dependencias de compilación necesarias para Alpine
+# Instala dependencias de compilación necesarias para Alpine y pip
 RUN apk add --no-cache --virtual .build-deps \
-    gcc \
-    musl-dev \
-    python3-dev \
-    libffi-dev \
-    openssl-dev \
-    jpeg-dev \
-    zlib-dev \
-    && pip install --no-cache-dir --upgrade pip
+        gcc \
+        jpeg-dev \
+        libffi-dev \
+        musl-dev \
+        openssl-dev \
+        python3-dev \
+        zlib-dev \
+    && pip install --no-cache-dir --upgrade pip \
+    && pip install --no-cache-dir -r requirements.txt \
+    && apk del .build-deps
 
 WORKDIR /backend
 COPY ./requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Limpia dependencias de compilación
-RUN apk del .build-deps
-
 COPY ./backend .
 
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
